# youtube-cli

./: entrypoint.sh  pyproject.toml
youtube_cli/: __main__.py  hard.py
