[tool.poetry]
name = "youtube-cli"
version = "0.1.0"
description = ""
authors = ["Marc Partensky <marc.partensky@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.81.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
python-youtube = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
